--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+    <!-- mdl -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/mdl/material-icons.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/mdl/mdl-1.3.0.blue-indigo.min.css">
+    <script defer src="%PUBLIC_URL%/mdl/material.1.3.0.min.js"></script>
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/style.css">    
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
